--- a/projects/web/app/views/guest/InstanceController/list.html
+++ b/projects/web/app/views/guest/InstanceController/list.html
@@ -15,7 +15,7 @@
 
 <br>
 
-#{crud.table fields: ['executor.name', 'cloudInstanceName', 
+#{crud.table fields: ['executor.name', 'cloudInstanceName', 'cloudInstanceIp', 
             'plugin.name', 'typeName', 'zoneName', 'price']}
             
     #{crud.custom 'executor.name'}
