--- a/projects/web/app/views/_layout/layout.html
+++ b/projects/web/app/views/_layout/layout.html
@@ -125,6 +125,9 @@
                     flashWarn('${flash.warning}');
                 #{/if}
                 
+                $('.submitForm').submit(function( event ) {
+                    showPleaseWait();
+                });
             });
             
             //Configure the check and uncheck for checkboxes
