--- a/projects/web/app/views/adm/SettingController/show.html
+++ b/projects/web/app/views/adm/SettingController/show.html
@@ -17,7 +17,7 @@
 <br>
 
 <div class="row col-lg-12" >
-#{form action:@save(object._key()), enctype:'multipart/form-data'}
+#{form action:@save(object._key()), enctype:'multipart/form-data', class: 'submitForm'}
 
     #{crud.form}
         
